{
  "version": 4,
  "terraform_version": "1.11.0",
  "serial": 19,
  "lineage": "85eafb9d-9375-db36-a808-254a16cce305",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "sm_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125549708:internet-gateway/igw-0d5ce8a60bdd585ad",
            "id": "igw-0d5ce8a60bdd585ad",
            "owner_id": "211125549708",
            "tags": {
              "Name": "sm-igw"
            },
            "tags_all": {
              "Name": "sm-igw"
            },
            "vpc_id": "vpc-027c766634bae9010"
          },
          "dependencies": [
            "aws_vpc.sm_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "sm_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125549708:route-table/rtb-04abee7b727960081",
            "id": "rtb-04abee7b727960081",
            "owner_id": "211125549708",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d5ce8a60bdd585ad",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sm-route-table"
            },
            "tags_all": {
              "Name": "sm-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-027c766634bae9010"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.sm_igw",
            "aws_vpc.sm_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sm_public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09e68ce8008b1f02b",
            "route_table_id": "rtb-04abee7b727960081",
            "subnet_id": "subnet-0887519d1465087ce"
          },
          "dependencies": [
            "aws_internet_gateway.sm_igw",
            "aws_route_table.sm_route_table",
            "aws_subnet.sm_public_subnet",
            "aws_vpc.sm_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sm_batch_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125549708:security-group/sg-0f083cec6db75a169",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f083cec6db75a169",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "sm-batch-sg",
            "name_prefix": "",
            "owner_id": "211125549708",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-027c766634bae9010"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sm_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sm_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125549708:subnet/subnet-0887519d1465087ce",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0887519d1465087ce",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "211125549708",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sm-public-subnet"
            },
            "tags_all": {
              "Name": "sm-public-subnet"
            },
            "vpc_id": "vpc-027c766634bae9010"
          },
          "dependencies": [
            "aws_vpc.sm_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "sm_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125549708:vpc/vpc-027c766634bae9010",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0bb8f719877006322",
            "default_route_table_id": "rtb-0e64e90d2aa2bb81b",
            "default_security_group_id": "sg-07b4359d6aa4467f0",
            "dhcp_options_id": "dopt-004cf2a7fed24a849",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-027c766634bae9010",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e64e90d2aa2bb81b",
            "owner_id": "211125549708",
            "tags": {
              "Name": "sm-vpc"
            },
            "tags_all": {
              "Name": "sm-vpc"
            }
          }
        }
      ]
    }
  ]
}